--- a/index.html
+++ b/index.html
@@ -3,24 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="surfLikePro">
+  <!--  <link rel="stylesheet" href="packages/font-awesome-4.7.0/css/font-awesome.min.css">-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Title</title>
 </head>
 <body>
-    <div class="container">
-        <div class="header_background">
+     <div class="header_background">
             <div class="header">
                 <img id="logo" src="images/surfhouseLogo.png"
                      alt=""
                      title="logo">
                 <div class="social_network">
-                    <ul>
-                        <li><a><img src="images/icons/facebook%20icon.png"></a></li>
-                        <li><a><img src="images/icons/twitter%20icon.png"></a></li>
-                        <li><a><img src="images/icons/youtube%20icon.png"></a></li>
-                        <li><a><img src="images/icons/pinterest%20icon.png"></a></li>
-                        <li><a><img src="images/icons/insta%20icon.png"></a></li>
-                    </ul>
+                    <a href="#">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-pinterest"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-instagram"></i>
+                    </a>
                 </div>
                 <div class="welcome_board">
                     <h3>Welcome to surfhouse</h3>
@@ -33,27 +42,291 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="menu">
-                <ul>
-                    <li class="menu_header"><a>MENU</a></li>
-                    <li class="menu_button"><a>About</a></li>
-                    <li class="menu_button"><a>Apparel</a></li>
-                    <li class="menu_button"><a>Surf apparel</a></li>
-                    <li class="menu_button"><a>Windsurf</a></li>
-                    <li class="menu_button"><a>Kitesurf</a></li>
-                    <li class="menu_button"><a>Accessories</a></li>
-                    <li class="menu_button"><a>Sale</a></li>
-                    <li class="menu_button"><a>Brands</a></li>
-                    <li class="menu_button"><a>Blog</a></li>
-                    <li class="menu_button"><a>Gadgets</a></li>
-                    <li class="menu_button"><a>Contact</a></li>
+        <div class="container_background">
+            <div class="container">
+                <div class="menu">
+                    <ul class="menu_ul">
+                        <li class="menu_header"><a>MENU</a></li>
+                        <li class="menu_button"><a>About</a></li>
+                        <li class="menu_button"><a>Apparel</a></li>
+                        <li class="menu_button"><a>Surf apparel</a></li>
+                        <li class="menu_button"><a>Windsurf</a></li>
+                        <li class="menu_button"><a>Kitesurf</a></li>
+                        <li class="menu_button"><a>Accessories</a></li>
+                        <li class="menu_button"><a>Sale</a></li>
+                        <li class="menu_button"><a>Brands</a></li>
+                        <li class="menu_button"><a>Blog</a></li>
+                        <li class="menu_button"><a>Gadgets</a></li>
+                        <li class="menu_button"><a>Contact</a></li>
+                    </ul>
+                    <div class="menu_nowIsOpen_background">
+                        <div class="menu_nowIsOpen">
+                            <span>Now<br>
+                                  is<br>
+                                  open
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="contentHeader">
+                        New products
+                    </div>
+                    <div class="productsWrap">
+                        <div class="productUnit productUnitNew">
+                            <img class="productImg" src="images/products/surf1.jpg" alt="surf1">
+                            <div class="productName">
+                                Single Thruster 2014
+                            </div>
+                            <div class="productPriceWrap">
+                                <div class="actualPrice">
+                                    &euro; 865.00
+                                </div>
+                            </div>
+                        </div>
+                        <div class="productUnit productUnitHot">
+                            <img class="productImg" src="images/products/surf2.jpg" alt="surf2">
+                            <div class="productName">
+                                Freestyle Wave FSW
+                            </div>
+                            <div class="productPriceWrap">
+                                <div class="actualPrice">
+                                    &euro; 770.50
+                                </div>
+                                <div class="oldPrice">
+                                    &euro; 1,270.15
+                                </div>
+                            </div>
+                        </div>
+                        <div class="productUnit">
+                            <img class="productImg" src="images/products/surf3.jpg" alt="surf3">
+                            <div class="productName">
+                                The White Collection
+                                SURFBOARD 2014
+                            </div>
+                            <div class="productPriceWrap">
+                                <div class="actualPrice">
+                                    &euro; 1,580.70
+                                </div>
 
+                            </div>
+                        </div>
+                        <div class="productUnit">
+                            <img class="productImg" src="images/products/surf4.jpg" alt="surf4">
+                            <div class="productName">
+                                OG SCALLOP SOLID
+                            </div>
+                            <div class="productPriceWrap">
+                                <div class="actualPrice">
+                                    &euro; 765.00
+                                </div>
+                            </div>
+                        </div>
+                        <div class="productUnit">
+                            <img class="productImg" src="images/products/surf5.jpg" alt="surf5">
+                            <div class="productName">
+                                STRIPE 19 QS
+                            </div>
+                            <div class="productPriceWrap">
+                                <div class="actualPrice">
+                                    &euro; 230.50
+                                </div>
+                            </div>
+                        </div>
+                        <div class="productUnit">
+                            <img class="productImg" src="images/products/surf6.jpg" alt="surf6">
+                            <div class="productName">
+                                YOKE 19 QS
+                            </div>
+                            <div class="productPriceWrap">
+                                <div class="actualPrice">
+                                    &euro; 1,130.70
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-                </ul>
+                    <div class="contentHeader">
+                        Top products
+                    </div>
+                    <div class="productsWrap">
+                        <div class="productUnit">
+                            <img class="productImg" src="images/products/springsuit1.jpg"
+                                 alt="springsuit1">
+                            <div class="productName">
+                                Ushingham
+                                Lightning 2014
+                            </div>
+                            <div class="productPriceWrap">
+                                <div class="actualPrice">
+                                    &euro; 2,960.95
+                                </div>
+                                <div class="oldPrice">
+                                    &euro; 3,100.15
+                                </div>
+                            </div>
+                        </div>
+                        <div class="productUnit">
+                            <img class="productImg" src="images/products/springsuit2.jpg"
+                                 alt="springsuit2">
+                            <div class="productName">
+                                CYPHER HEAT VES M
+                            </div>
+                            <div class="productPriceWrap">
+                                <div class="actualPrice">
+                                    &euro; 849.95
+                                </div>
+                            </div>
+                        </div>
+                        <div class="productUnit">
+                            <img class="productImg" src="images/products/springsuit3.jpg"
+                                 alt="springsuit3">
+                            <div class="productName">
+                                SYNCRO WOMENS
+                                QS M
+                            </div>
+                            <div class="productPriceWrap">
+                                <div class="actualPrice">
+                                    &euro; 1,110.99
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="contentHeader">
+                        Sale products
+                    </div>
+                    <div class="productsWrap saleProducts">
+                        <div class="productUnit">
+                            <img class="productImg" src="images/products/rashguard.jpg"
+                                 alt="rashguard">
+                            <div class="productName">
+                                SYNCRO MENS QS M
+                            </div>
+                            <div class="productPriceWrap">
+                                <div class="actualPrice">
+                                    &euro; 249.95
+                                </div>
+                                <div class="oldPrice">
+                                    &euro; 450.15
+                                </div>
+                            </div>
+                        </div>
+                        <div class="productUnit">
+                            <img class="productImg" src="images/products/springsuit2.jpg"
+                                 alt="springsuit2">
+                            <div class="productName">
+                                RAMOS - SHIRT FOR MEN
+                            </div>
+                            <div class="productPriceWrap">
+                                <div class="actualPrice">
+                                    &euro; 459.65
+                                </div>
+                                <div class="oldPrice">
+                                    &euro; 570.65
+                                </div>
+                            </div>
+                        </div>
+                        <div class="productUnit">
+                            <img class="productImg" src="images/products/springsuit3.jpg"
+                                 alt="springsuit3">
+                            <div class="productName">
+                                SixSixOne Evo Wired Full Face
+                            </div>
+                            <div class="productPriceWrap">
+                                <div class="actualPrice">
+                                    &euro; 240.00
+                                </div>
+                                <div class="oldPrice">
+                                    &euro; 370.65
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="brands">
+                    <img src="images/brands/Bic-surf_1.jpg" alt="">
+                    <img src="images/brands/CBC_1.jpg" alt="">
+                    <img src="images/brands/Channel-Islands_2.jpg" alt="">
+                    <img src="images/brands/Cortez_1.jpg" alt="">
+                    <img src="images/brands/Firewire_1.jpg" alt="">
+                    <img src="images/brands/Haydenshapes_1.jpg" alt="">
+                    <img src="images/brands/Lost.jpg" alt="">
+                    <img src="images/brands/Nine-Plus_1.jpg" alt="">
+                </div>
+                <div class="istagramFeedWrap">
+                    <div class="instaFeedHead">
+                        <i class="fab fa-instagram"></i>
+                        <span>Instagram feed:</span> #surfhouse
+                    </div>
+                    <div class="instaFeedImages">
+                        <img src="images/instaFeed/1.jpg" alt="">
+                        <img src="images/instaFeed/2.jpg" alt="">
+                        <img src="images/instaFeed/3.jpg" alt="">
+                        <img src="images/instaFeed/4.jpg" alt="">
+                        <img src="images/instaFeed/5.jpg" alt="">
+                        <img src="images/instaFeed/6.jpg" alt="">
+                    </div>
+                </div>
+                <div class="socialButtonsWrap">
+                    <a href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-pinterest"></i>
+                    </a>
+                </div>
             </div>
         </div>
-        <div class="footer"></div>
-    </div>
+        <div class="footer_background">
+            <div class="footer">
+                <div>
+                    <div class="columnTitle">
+                        Category
+                    </div>
+                    <div class="columnLinks">
+                        <a href="#">Home</a>
+                        <a href="#">about us</a>
+                        <a href="#">eshop</a>
+                        <a href="#">Features</a>
+                        <a href="#">new collections</a>
+                        <a href="#">blog</a>
+                        <a href="#">contact</a>
+                    </div>
+                </div>
+                <div>
+                    <div class="columnTitle">
+                        Our Account
+                    </div>
+                    <div class="columnLinks">
+                        <a href="#">Your Account</a>
+                        <a href="#">Personal information</a>
+                        <a href="#">Addresses</a>
+                        <a href="#">Discount</a>
+                        <a href="#">Orders history</a>
+                        <a href="#">Addresses</a>
+                        <a href="#">Search Terms</a>
+                    </div>
+                </div>
+                <div>
+                    <div class="columnTitle">
+                        Our Support
+                    </div>
+                    <div class="columnLinks">
+                        <a href="#">Site Map</a>
+                        <a href="#">Search Terms</a>
+                        <a href="#">Advanced Search</a>
+                        <a href="#">Mobile</a>
+                        <a href="#">Contact Us</a>
+                        <a href="#">Mobile</a>
+                        <a href="#">Addresses</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 </body>
 </html>
